# prefpicker

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  .taskcluster.yml  .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.ci/scripts/: semantic-release-publish.sh
.github/workflows/: ci.yml  prefmonitor.yml
prefpicker/: __init__.py  __main__.py  main.py  prefpicker.py  test_main.py  test_prefpicker.py  test_templates.py
prefpicker/templates/: browser-fuzzing.yml
src/prefpicker/: __init__.py  main.py  prefpicker.py  test_main.py  test_prefpicker.py  test_templates.py
src/prefpicker/templates/: browser-fuzzing.yml  schema.json
templates/: browser-fuzzing.yml
