[build-system]
requires = ["setuptools >= 43", "wheel", "setuptools_scm[toml] >= 3.4"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "*/setup.py",
    "*/__main__.py",
    "*/test_*",
    "*/build/*",
    "*/dist/*",
    "*/.tox/*",
    "*/.egg/*",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
show_error_codes = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "fixme",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-statements",
]

[tool.pylint.typecheck]
ignored-modules = ["pytest"]

[tool.pytest.ini_options]
log_level = "DEBUG"

[tool.ruff]
fix = true
target-version = "py39"

[tool.ruff.lint]
select = [
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Flynt
    "FLY",
    # isort
    "I",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # pyupgrade
    "UP",
    # pycodestyle
    "W",
]

[tool.semantic_release]
tag_format = "{version}"
build_command = "SETUPTOOLS_SCM_PRETEND_VERSION_FOR_PREFPICKER=$NEW_VERSION pipx run build -v"

[tool.setuptools_scm]
