[metadata]
author = Tyson Smith
author_email = twsmith@mozilla.com
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
description = PrefPicker - Manage & generate prefs.js files
keywords = firefox fuzz fuzzing test testing
license = MPL 2.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = prefpicker
url = https://github.com/MozillaSecurity/prefpicker

[options]
include_package_data = True
install_requires =
    PyYAML
package_dir =
    = src
packages =
    prefpicker
python_requires = >=3.7
zip_safe = False

[options.entry_points]
console_scripts =
    prefpicker = prefpicker.main:main

[options.extras_require]
dev =
    pre-commit
    tox
