[metadata]
author = Tyson Smith
author_email = twsmith@mozilla.com
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
description = PrefPicker - Manage & generate prefs.js files
keywords = firefox fuzz fuzzing test testing
license = MPL 2.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = prefpicker
url = https://github.com/MozillaSecurity/prefpicker

[options]
include_package_data = True
install_requires =
    PyYAML
package_dir =
    = src
packages =
    prefpicker
python_requires = >=3.7
zip_safe = False

[options.entry_points]
console_scripts =
    prefpicker = prefpicker.main:main

[options.extras_require]
dev =
    pre-commit
    tox

[semantic_release]
# Set changelog to README.md.  Will prevent changelog from being generated since no placeholder exists.
# https://github.com/python-semantic-release/python-semantic-release/blob/8f2185d570b3966b667ac591ae523812e9d2e00f/semantic_release/vcs_helpers.py#L195-L200
changelog_file=README.md
commit_subject = "chore(release): {version} [skip ci]"
tag_format = {version}
upload_to_pypi = true
upload_to_release = false
# Set version location to non-existent pattern until the next major release
# https://github.com/python-semantic-release/python-semantic-release/issues/354#issuecomment-916836293
version_pattern = "README.md:non-existent"
version_source = tag
